# pitstop-linux

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
docs/superpowers/plans/: 2026-07-01-01-projection.md  2026-07-01-02-dashboard-links.md  2026-07-01-03-oauth-relogin.md  2026-07-01-04-gemini-antigravity.md  2026-07-01-05-updater.md  2026-07-02-01-fable-scoped-limits.md  2026-07-02-02-robustness-polish.md
docs/superpowers/specs/: 2026-07-01-linux-v0.3.1-catchup-design.md  2026-07-02-linux-v0.4.1-catchup-design.md
src/: app.rs  claude_store.rs  codex.rs  codex_store.rs  credentials.rs  format.rs  gemini.rs  gemini_store.rs  icon.rs  loopback.rs  main.rs  model.rs  notify.rs  oauth.rs  secret_service.rs  secret_store.rs  settings.rs  tray.rs  updater.rs  usage_api.rs  util.rs
