[package]
name = "pitstop"
version = "0.3.1"
edition = "2021"
description = "Linux tray app that tracks AI coding usage limits (Claude Code, OpenAI Codex, Google Gemini) and switches accounts"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
ab_glyph = "0.2"
anyhow = "1"
png = "0.17"
sha2 = "0.10"
rand = "0.8"
async-trait = "0.1"
libc = "0.2"
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
